2006-09-27  Alp Toker  <alp@atoker.com>

	* src/Main.cs: Remove old "Suppress finalizing the dbusCore D-Bus
	proxy object" hack; no longer needed with managed dbus

2006-09-27  Alp Toker  <alp@atoker.com>

	* dbus-sharp/*: Update bundled NDesk.DBus, NDesk.DBus.GLib.
	New API and variant fixes to support upcoming managed Notifications.
	* hal-sharp/Communication.cs:
	* src/Banshee.Base/DBusRemote.cs: Work towards a cleaner dbus-sharp
	public API.

2006-09-26  Aaron Bockover  <abock@gnome.org>

	* hal-sharp/Communication.cs: Allow setting the Bus

	* hal-sharp/Device.cs: Work around big problem in the HAL spec, 
	added explicit StringList support

	* src/Banshee.Base/HalCore.cs: Set the Hal.Communication.Bus

	* src/Banshee.Dap/MassStorage/MassStorageDap.cs: Minor fixes

	* dbus-sharp/NDesk.DBus.dll: Updated

2006-09-26  James Willcox  <snorp@snorp.net>

	* src/Banshee.Plugins/Daap/daap-sharp/*: update to 0.3.5

2006-09-26  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Dap/DapCore.cs: More fixes; should fix last remaining
	known issues from the new managed HAL migration

2006-09-26  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Dap/DapCore.cs: Ignore volumes that will not be 
	mounted and ignore disc volumes to keep them from ever being exposed
	as DAPs or going into the volume mount wait queue; remove items from
	the volume mount wait queue if they are physically removed

2006-09-26  Aaron Bockover  <abock@gnome.org>

	* hal-sharp/Manager.cs: Added DeviceAddedArgs and DeviceRemovedArgs as
	in a remove event, the UDI as a device object won't exist

	* src/Banshee.Base/Banshee.Cdrom.Nautilus/NautilusDrive.cs:
	* src/Banshee.Base/Banshee.Cdrom.Nautilus/NautilusDriveFactory.cs:
	* src/Banshee.Base/Dap/DapCore.cs: Updated to use DeviceAdded/RemovedArgs

2006-09-26  Aaron Bockover  <abock@gnome.org>

	hal-sharp has been rewritten on top of the new managed DBus; with this
	commit there is no more native DBus or HAL code in Banshee at all!
