@@ -240,7 +240,7 @@
 			      <property name="yalign">0.5</property>
 			      <property name="xpad">0</property>
 			      <property name="ypad">4</property>
-			      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			      <property name="ellipsize">PANGO_ELLIPSIZE_END</property>
 			      <property name="width_chars">-1</property>
 			      <property name="single_line_mode">False</property>
 			      <property name="angle">0</property>
